Option to disable remote servers (#410)
* refactoring

* refactoring

* refactoring

* refactoring

* Adjusting tests

* creating test for no remote servers option

* tests are passing

* refactoring test

* parameterize no remote servers

* adjusting tests

* adjusting tests

* adjusting tests

* adjusting tests

* New Docs

* more detailed configuration doc

* release notes

* [Gradle Release Plugin] - new version commit:  '3.15.11-snapshot'.

* supressing warnings on 3rd class

* unnecessary class